--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@sendgrid/mail": "^8.1.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
@@ -12,9 +14,11 @@
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mmenu-js": "^9.3.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.72.0",
     "socket.io": "^4.8.1"
   }
 }
